bug/MET-5110 fix entity status when no entity found for existing vocabulary II (#616)
* MET-5110 update status codes for dereference

* MET-5110 unknown entities will return success when dereferencing

* MET-5110 not found vocabulary null return NO_VOCABULARY_MATCHING

* MET-5110 fix computeEntityVocabulary to return correct status

* MET-5110 add unit test coverage

* MET-5110 add unit test coverage